# traktor

./: .gitignore  10_buildDockerTraktor.sh  20_runDockerTraktor.sh  CMakeLists.txt  Dockerfile  README.md  build.txt  build_jetson.sh  cmake_jetson.sh  cmake_pi4.sh  demo.py  detector.py  getDependencies.sh  make_jetson.sh  make_pi4.sh  pom.xml  render.py  run_skypeCam_1280_800.sh  snapshot.py  stream.py  tractor.py  traktor.service  util.py  video.py  video1.py  webservice.py
cmake_opencv_aarch64/: build.sh  toolchain.cmake
detect/: lastSettings.json
misc/: 10_buildDockerTraktor.sh  20_runDockerTraktor.sh  CompileTimes.txt
opencv/: aarch64-gnu.musl.toolchain.cmake  run_cross_compile.sh
platform/: jetson.cmake  raspi4.cmake
src/: CMakeLists.txt  CameraContext.h  Werte in Zentimeter  Workitem.h  build.txt  camera.h  detect.cpp  detect.h  detect_settings.cpp  encode.h  harrow.cpp  harrow.h  main.cpp  pipeline_1_camera.cpp  pipeline_2_detect.cpp  pipeline_3_encode_send.cpp  sendJPEG.cpp  shared.h  stats.cpp  stats.h  thread_camera.cpp  thread_centerHarrow.cpp  thread_center_harrow.cpp  thread_detect.cpp  thread_send_jpeg.cpp  thread_stats.cpp  toggle.c  util.cpp  util.h  webserver.cpp  webserver.h
src/main/resources/: application.properties
src/main/webapp/: controlTractor.py  detector.py  index.html  snapShot.php  snapShot.py  snapshot.py  stream.py  tractor.php  tractor.py  traktor.php  video.py  video1.py  webServiceOnOff.sh  webservice.php  webservice.py
src/main/webapp/scripts/: tractor.js
src/main/webapp/static/: index.html
src/main/webapp/static/scripts/: tractor.js
src/old/: thread_detect.cpp
src/pipeline/: ImagePipeline.Readme.txt  ImagePipeline.cpp  ImagePipeline.hpp  Postbox.hpp
static/: howto_systemd_traktor_service.txt  index.html
static/scripts/: tractor.js
test/: CMakeLists.txt  traktor_test.cpp
traktor/: CMakeLists.txt
traktor/src/: camera.h  detect_settings.cpp  encode.h  harrow.cpp  pipeline_2_detect.cpp  pipeline_3_encode_send.cpp  shared.h  thread_center_harrow.cpp  thread_stats.cpp  util.h
traktor/src/pipeline/: ImagePipeline.hpp  Postbox.cpp  auto_reset_event.cpp  auto_reset_event.hpp
util/: list_cam_resolutions.txt
